--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "ngx-bootstrap": "^12.0.0",
     "owl.carousel": "^2.3.4",
     "query": "^0.2.0",
     "rxjs": "~7.8.0",
